--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: BUPT ncov auto-report Python+Actions V3.0
 
 on:
   schedule:
-    - cron: "*/30 */4 * * *"
+    - cron: "5 22 * * *"
   workflow_dispatch:
 
 jobs:
